[package]
name = "lamport-sig"
version = "0.1.0"
authors = ["NoCtrlZ <phantomofrotten@gmail.com>"]
description = "Lamport Signature"
edition = "2018"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigint = "4"
rand = "0.7"
